--- a/chatroom_webprog/public/css/style.css
+++ b/chatroom_webprog/public/css/style.css
@@ -15,7 +15,8 @@
 
 .chat{
 	height: 80%;
-	width: 100%
+	width: 100%;
+	overflow-y:scroll;
 }
 
 .chatbody{
@@ -25,12 +26,16 @@
 
 input[name="message"]{
 	height: 100%;
-	width: 80%
+	width: 90%;
+	float:left;
 }
 .btn.btn-large.btn-primary.send{
 	height: 100%;
 	width: 18%;
 	font-size: 24px
+}
+.send{
+	float: right;
 }
 
 .chatform{
