--- a/chatroom_webprog/public/css/style.css
+++ b/chatroom_webprog/public/css/style.css
@@ -26,7 +26,7 @@
 }
 
 input[name="message"]{
-	height: 100%;
+	height: 30px;
 	width: 90%;
 	float:left;
 }
@@ -47,6 +47,7 @@ input[name="message"]{
 
 .addbut{
 	float: right;
+	margin-top: -20px;
 }
 
 
