--- a/chatroom_webprog/public/css/style.css
+++ b/chatroom_webprog/public/css/style.css
@@ -56,4 +56,7 @@ a:visited {color: black;}   /* visited link */
 a:hover {color: black;}     /* mouse over link */
 a:active {color: black;}    /* selected link */
 
-html,body { height: 100%; margin: 0px; padding: 0px; }
+html,body { height: 100%; margin: 0px; padding: 0px; 
+	font-family: 'Alegreya', serif;
+	font-size: 20px !important;
+}
